native/ailia.h

/****************************************************************
 * ライブラリ状態定義
 **/

/**
 * \~japanese
 * @def AILIA_STATUS_SUCCESS
 * @brief 成功
 *
 * \~english
 * @def AILIA_STATUS_SUCCESS
 * @brief Successful
 */
#define AILIA_STATUS_SUCCESS (0)

/****************************************************************
 * ネットワークオブジェクトのインスタンス
 **/

struct AILIANetwork;


/****************************************************************
 * 状態取得API
 **/

/**
 * \~japanese
 * @brief 推論時の内部データ(Blob)の数を取得します。
 * @param net ネットワークオブジェクトポインタ
 * @param blob_count blobの数の格納先
 * @return
 *   成功した場合は \ref AILIA_STATUS_SUCCESS 、そうでなければエラーコードを返す。
 * @details
 *   このAPIはailiaOpenStreamXXX呼び出し後より利用可能です。
 *   なお、ailiaOpenStreamXXX呼び出し時は入出力Blobのみが列挙され、ailiaOpneWeightXXX呼び出し時に中間Blobの列挙が行われます。
 *   そのためailiaOpenStreamXXX呼び出し直後とailiaOpneWeightXXX呼び出し直後で返答する数が変わる場合があります。
 *
 * \~english
 * @brief Gets the amount of internal data (blob) during inference.
 * @param net A network instance pointer
 * @param blob_count Storage location of the number of blobs
 * @return
 *   If this function is successful, it returns  \ref AILIA_STATUS_SUCCESS , or an error code otherwise.
 * @details
 *   This API can be call after call ailiaOpenStreamXXX().
 *   In addition, this api returuns number of sum of inputs and outputs when after call ailiaOpenStreamXXX.
 *   And, when call ailiaOpenWeightXXX, enumerate and optimzie intermediate blobs.
 *   So, this api may return more count after call ailiaOpenWeightXXX.
 */
int AILIA_API ailiaGetBlobCount(struct AILIANetwork* net, unsigned int* blob_count);


/**
 * \~japanese
 * @brief 推論時の内部データ(Blob)の型を取得します。
 * @param net ネットワークオブジェクトポインタ
 * @param type データ型の書き出し先バッファ。値は AILIA_DATATYPE_XXX で定義されています。
 * @param blob_idx blobのインデックス (0～ ailiaGetBlobCount() -1)
 * @return
 *   成功した場合は \ref AILIA_STATUS_SUCCESS 、そうでなければエラーコードを返す。
 * @details
 *   このAPIはailiaOpenWeighXXX呼び出し後より利用可能です。
 *
 * \~english
 * @brief Get the type of Blob.
 * @param net A network instance pointer
 * @param blob_idx The index of the blob (0 to  ailiaGetBlobCount() -1)
 * @param type The type of blob is stored to it. Values are defined as AILIA_DATATYPE_XXX.
 * @return
 *   If this function is successful, it returns  \ref AILIA_STATUS_SUCCESS , or an error code otherwise.
 * @details
 *   This API can be call after call ailiaOpenWeighXXX().
 */
int AILIA_API ailiaGetBlobDataType(struct AILIANetwork* net, int* type, unsigned int blob_idx);


/**
 * \~japanese
 * @brief 推論時の内部データ(Blob)のインデックスを名前で探し取得します。
 * @param net ネットワークオブジェクトポインタ
 * @param blob_idx blobのインデックス (0～ ailiaGetBlobCount() -1)
 * @param name 検索するBlob名
 * @return
 *   成功した場合は \ref AILIA_STATUS_SUCCESS 、そうでなければエラーコードを返す。
 * @details
 *   このAPIはailiaOpenStreamXXX呼び出し後より利用可能です。
 *   なお、ailiaOpenStreamXXX呼び出し時は入出力Blobのみが検索可能です。中間Blobを検索する場合ailiaOpneWeightXXXを呼び出す必要があります。
 *
 * \~english
 * @brief Searches by name for the index of the internal data (blob) during inference and returns it.
 * @param net A network instance pointer
 * @param blob_idx The index of the blob (0 to  ailiaGetBlobCount() -1)
 * @param name The name of the blob to search for
 * @return
 *   If this function is successful, it returns  \ref AILIA_STATUS_SUCCESS , or an error code otherwise.
 * @details
 *   This API can be call after call ailiaOpenStreamXXX().
 *   In addition, when call this API before call ailiaOpenWeightXXX, can only find inputs and outputs blobs.
 *   If you want find intermediate blobs, please call ailiaOpenWeightXXX before.
 */
int AILIA_API ailiaFindBlobIndexByName(struct AILIANetwork* net, unsigned int* blob_idx, const char* name);


/**
 * \~japanese
 * @brief 内部データ(Blob)の名前の出力に必要なバッファのサイズを取得します。
 * @param net ネットワークオブジェクトポインタ
 * @param blob_idx blobのインデックス (0～ ailiaGetBlobCount() -1)
 * @param buffer_size Blob名の出力に必要なバッファのサイズ(終端null文字分を含む)
 * @return
 *   成功した場合は \ref AILIA_STATUS_SUCCESS 、そうでなければエラーコードを返す。
 * @details
 *   このAPIはailiaOpenStreamXXX呼び出し後より利用可能です。
 *   なお、ailiaOpenStreamXXX呼び出し時は入出力Blobのみが検索可能です。中間Blobを検索する場合ailiaOpneWeightXXXを呼び出す必要があります。
 *
 * \~english
 * @brief Gets the size of the buffer needed for output of the name of the internal data (blob).
 * @param net A network instance pointer
 * @param blob_idx The index of the blob (0 to  ailiaGetBlobCount() -1)
 * @param buffer_size The size of the buffer needed for output of the blob name (including the null terminator)
 * @return
 *   If this function is successful, it returns  \ref AILIA_STATUS_SUCCESS , or an error code otherwise.
 * @details
 *   This API can be call after call ailiaOpenStreamXXX().
 *   In addition, when call this API before call ailiaOpenWeightXXX, can only find inputs and outputs blobs.
 *   If you want find intermediate blobs, please call ailiaOpenWeightXXX before.
 */
int AILIA_API ailiaGetBlobNameLengthByIndex(struct AILIANetwork* net, const unsigned int blob_idx, unsigned int* buffer_size);


/**
 * \~japanese
 * @brief 推論時の内部データ(Blob)の名前をインデックスで探し取得します。
 * @param net ネットワークオブジェクトポインタ
 * @param buffer Blob名の出力先バッファ
 * @param buffer_size バッファのサイズ(終端null文字分を含む)
 * @param blob_idx 検索するblobのインデックス
 * @return
 *   成功した場合は \ref AILIA_STATUS_SUCCESS 、そうでなければエラーコードを返す。
 * @details
 *   このAPIはailiaOpenStreamXXX呼び出し後より利用可能です。
 *   なお、ailiaOpenStreamXXX呼び出し時は入出力Blobのみが検索可能です。中間Blobを検索する場合ailiaOpneWeightXXXを呼び出す必要があります。
 *
 * \~english
 * @brief Searches by index for the name of the internal data (blob) during inference and returns it.
 * @param net A network instance pointer
 * @param buffer The output destination buffer for the blob name
 * @param buffer_size The size of the buffer (including the null terminator)
 * @param blob_idx The index of the blob to search for
 * @return
 *   If this function is successful, it returns  \ref AILIA_STATUS_SUCCESS , or an error code otherwise.
 * @details
 *   This API can be call after call ailiaOpenStreamXXX().
 *   In addition, when call this API before call ailiaOpenWeightXXX, can only find inputs and outputs blobs.
 *   If you want find intermediate blobs, please call ailiaOpenWeightXXX before.
 */
int AILIA_API ailiaFindBlobNameByIndex(struct AILIANetwork* net, char* buffer, const unsigned int buffer_size, const unsigned int blob_idx);


/**
 * \~japanese
 * @brief ネットワークSummary用に必要なバッファのサイズを取得します。
 * @param net ネットワークオブジェクトポインタ
 * @param buffer_size バッファのサイズの格納先(終端null文字分を含む)
 * @return
 *   成功した場合は \ref AILIA_STATUS_SUCCESS 、そうでなければエラーコードを返す。
 * @details
 *   このAPIはailiaOpenWeighXXX呼び出し後より利用可能です。
 *
 * \~english
 * @brief Gets the size of the buffer needed for the network summary.
 * @param net A network instance pointer
 * @param buffer_size The storage location of the buffer size (including the null terminator)
 * @return
 *   If this function is successful, it returns  \ref AILIA_STATUS_SUCCESS , or an error code otherwise.
 * @details
 *   This API can be call after call ailiaOpenWeighXXX().
 */
int AILIA_API ailiaGetSummaryLength(struct AILIANetwork* net, unsigned int* buffer_size);


/**
 * \~japanese
 * @brief 各Blobの名前と形状を表示します。
 * @param net ネットワークオブジェクトポインタ
 * @param buffer Summaryの出力先
 * @param buffer_size 出力バッファのサイズ(終端null文字分を含む)。 ailiaGetSummaryLength()
 * で取得した値を設定してください。
 * @return
 *   成功した場合は \ref AILIA_STATUS_SUCCESS 、そうでなければエラーコードを返す。
 * @details
 *   このAPIはailiaOpenWeighXXX呼び出し後より利用可能です。
 *
 * \~english
 * @brief Shows the name and shape of each blob.
 * @param net A network instance pointer
 * @param buffer The output destination of the summary
 * @param buffer_size The size of the output buffer (including the null terminator). Set the value obtained by
 * ailiaGetSummaryLength() .
 * @return
 *   If this function is successful, it returns  \ref AILIA_STATUS_SUCCESS , or an error code otherwise.
 * @details
 *   This API can be call after call ailiaOpenWeighXXX().
 */
int AILIA_API ailiaSummary(struct AILIANetwork* net, char* const buffer, const unsigned int buffer_size);


/****************************************************************
 * 複数入力指定・推論API
 **/

/**
 * \~japanese
 * @brief 入力データ(Blob)の数を取得します。
 * @param net ネットワークオブジェクトポインタ
 * @param input_blob_count 入力blobの数の格納先
 * @return
 *   成功した場合は \ref AILIA_STATUS_SUCCESS 、そうでなければエラーコードを返す。
 * @details
 *   このAPIはailiaOpenStreamXXX呼び出し後より利用可能です。
 *   なお、入力Blobの列挙はailiaOpenStreamXXX呼び出し時に行われますが変更可能な重み(input付きinitialzier)の列挙はailiaOpneWeightXXX呼び出し時に行われます。
 *   そのためailiaOpenStreamXXX呼び出し直後とailiaOpneWeightXXX呼び出し直後で返答する数が変わる場合があります。
 *
 * \~english
 * @brief Get the number of input data blobs.
 * @param net A network instance pointer
 * @param input_blob_count Storage location of the number of input blobs
 * @return
 *   If this function is successful, it returns  \ref AILIA_STATUS_SUCCESS , or an error code otherwise.
 * @details
 *   This API can be call after call ailiaOpenStreamXXX().
 *   In addition, this api returuns number of inputs when after call ailiaOpenStreamXXX.
 *   And, when call ailiaOpenWeightXXX, enumerate and optimzie initializer with input blobs.
 *   So, this api may return more count after call ailiaOpenWeightXXX.
 */
int AILIA_API ailiaGetInputBlobCount(struct AILIANetwork* net, unsigned int* input_blob_count);